# eyedog

./: .gitignore  README.md  __init__.py  app.py  detect.py  exc.py  faces_base.py  manage.py
cfg/: __init__.py  classifiers.py  detect.py  faces_base.py  resources.py  tracking.py
install/: install.yml
install/tasks/: build_cpp_module.yml  caffe.yml  opencv.yml  pyboost.yml  pyboost_opencv.yml
pyboost/opencv/: CMakeLists.txt  build.sh
pyboost/opencv/cmake/: DetectPython.cmake
pyboost/opencv/include/: pyboostcvconverter.hpp
pyboost/opencv/src/: pyboost_cv3_converter.cpp
pyboost/std/: wrappers.hpp
recognize/: CMakeLists.txt  __init__.py
recognize/include/: Classifier.hpp
recognize/src/: py_module.cpp
tracking/: CMakeLists.txt  __init__.py
tracking/include/: KltTracker.h  MultiTracker.h  TemplateTracker.h  Tracker.hpp  utils.hpp
tracking/src/: KltTracker.cpp  MultiTracker.cpp  TemplateTracker.cpp  py_module.cpp
utils/: __init__.py  args_types.py  assert_cond.py  img.py  path.py  pyboost.py  types.py
